--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,115 +12,62 @@ body {
   }
 }
 
-/* :root  {
-  --background: 145 0% 95%;
-  --foreground: 145 0% 10%;
-  --card: 145 0% 95%;
-  --card-foreground: 145 0% 15%;
-  --popover: 145 0% 95%;
-  --popover-foreground: 145 95% 10%;
-  --primary: 145 97.1% 13.3%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 145 10% 90%;
-  --secondary-foreground: 0 0% 0%;
-  --muted: 107 10% 95%;
-  --muted-foreground: 145 0% 40%;
-  --accent: 107 10% 90%;
-  --accent-foreground: 145 0% 15%;
-  --destructive: 0 50% 50%;
-  --destructive-foreground: 145 0% 95%;
-  --border: 145 20% 82%;
-  --input: 145 20% 50%;
-  --ring: 145 97.1% 13.3%;
-  --radius: 0.5rem;
-  --chart-1: 12 76% 61%;
-  --chart-2: 173 58% 39%;
-  --chart-3: 197 37% 24%;
-  --chart-4: 43 74% 66%;
-  --chart-5: 27 87% 67%;
-}
-.dark  {
-  --background: 145 10% 10%;
-  --foreground: 145 0% 95%;
-  --card: 145 0% 10%;
-  --card-foreground: 145 0% 95%;
-  --popover: 145 10% 5%;
-  --popover-foreground: 145 0% 95%;
-  --primary: 145 97.1% 13.3%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 145 10% 20%;
-  --secondary-foreground: 0 0% 100%;
-  --muted: 107 10% 25%;
-  --muted-foreground: 145 0% 65%;
-  --accent: 107 10% 25%;
-  --accent-foreground: 145 0% 95%;
-  --destructive: 0 50% 50%;
-  --destructive-foreground: 145 0% 95%;
-  --border: 145 20% 50%;
-  --input: 145 20% 50%;
-  --ring: 145 97.1% 13.3%;
-  --radius: 0.5rem;
-  --chart-1: 220 70% 50%;
-  --chart-2: 160 60% 45%;
-  --chart-3: 30 80% 55%;
-  --chart-4: 280 65% 60%;
-  --chart-5: 340 75% 55%;
-} */
 
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 145 83% 16%;
+    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 145 83% 16%;
+    --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
 
-:root  {
-  --background: 145 0% 100%;
-  --foreground: 145 0% 10%;
-  --card: 145 0% 100%;
-  --card-foreground: 145 0% 15%;
-  --popover: 145 0% 100%;
-  --popover-foreground: 145 95% 10%;
-  --primary: 145 83% 16%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 145 10% 90%;
-  --secondary-foreground: 0 0% 0%;
-  --muted: 107 10% 95%;
-  --muted-foreground: 145 0% 40%;
-  --accent: 107 10% 90%;
-  --accent-foreground: 145 0% 15%;
-  --destructive: 0 50% 50%;
-  --destructive-foreground: 145 0% 100%;
-  --border: 145 20% 82%;
-  --input: 145 20% 50%;
-  --ring: 145 83% 16%;
-  --radius: 0.5rem;
-  --chart-1: 12 76% 61%;
-  --chart-2: 173 58% 39%;
-  --chart-3: 197 37% 24%;
-  --chart-4: 43 74% 66%;
-  --chart-5: 27 87% 67%;
-}
-.dark  {
-  --background: 145 10% 10%;
-  --foreground: 145 0% 100%;
-  --card: 145 0% 10%;
-  --card-foreground: 145 0% 100%;
-  --popover: 145 10% 5%;
-  --popover-foreground: 145 0% 100%;
-  --primary: 145 83% 16%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 145 10% 20%;
-  --secondary-foreground: 0 0% 100%;
-  --muted: 107 10% 25%;
-  --muted-foreground: 145 0% 65%;
-  --accent: 107 10% 25%;
-  --accent-foreground: 145 0% 95%;
-  --destructive: 0 50% 50%;
-  --destructive-foreground: 145 0% 100%;
-  --border: 145 20% 50%;
-  --input: 145 20% 50%;
-  --ring: 145 83% 16%;
-  --radius: 0.5rem;
-  --chart-1: 220 70% 50%;
-  --chart-2: 160 60% 45%;
-  --chart-3: 30 80% 55%;
-  --chart-4: 280 65% 60%;
-  --chart-5: 340 75% 55%;
+  .dark {
+    --background: 20 14.3% 4.1%;
+    --foreground: 0 0% 95%;
+    --card: 24 9.8% 10%;
+    --card-foreground: 0 0% 95%;
+    --popover: 0 0% 9%;
+    --popover-foreground: 0 0% 95%;
+    --primary: 145 83% 16%;
+    --primary-foreground: 144.9 80.4% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 12 6.5% 15.1%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 145 83% 16%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
 }
 
 
